--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "^3.3.7",
     "jsdom": "^9.9.1",
     "react": "^16.0.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.0.0",
     "react-scripts": "^1.0.7",
     "react-test-renderer": "^16.0.0",
